--- a/research.Rmd
+++ b/research.Rmd
@@ -38,6 +38,8 @@ Carlot J, Rouzé H, Barneche DR, Mercière A, Espiau B, Cardini U, Brandl DJ, Ca
 
 Raick X, Di Iorio L, Lecchini D, Gervaise C, Hédouin L, **Pérez-Rosales G**, Rouzé H, Bertucci F, Parmentier É. (2023) Fish sounds of photic and mesophotic coral reefs: variation with depth and type of island. Coral Reefs https://doi.org/10.1007/s00338-022-02343-7
 
+Raick X, Di Iorio L, Lecchini D, Gervaise C, Hédouin L, **Pérez-Rosales G**, Rouzé H, Bertucci F, Parmentier É. (2023) Fish sounds of photic and mesophotic coral reefs: variation with depth and type of island. Coral Reefs https://doi.org/10.1007/s00338-022-02343-7
+
 
 ## International conferences and workshops
 
