--- a/research.Rmd
+++ b/research.Rmd
@@ -38,7 +38,7 @@ Carlot J, Rouzé H, Barneche DR, Mercière A, Espiau B, Cardini U, Brandl DJ, Ca
 
 Raick X, Di Iorio L, Lecchini D, Gervaise C, Hédouin L, **Pérez-Rosales G**, Rouzé H, Bertucci F, Parmentier É. (2023) Fish sounds of photic and mesophotic coral reefs: variation with depth and type of island. Coral Reefs https://doi.org/10.1007/s00338-022-02343-7
 
-Raick X, Di Iorio L, Lecchini D, Gervaise C, Hédouin L, **Pérez-Rosales G**, Rouzé H, Bertucci F, Parmentier É. (2023) Fish sounds of photic and mesophotic coral reefs: variation with depth and type of island. Coral Reefs https://doi.org/10.1007/s00338-022-02343-7
+Carlot J, Vousdoukas M, Rovere A, Karambas T, Lenihan HS, Kayal M, Adjeroud M, **Pérez-Rosales G, Hedouin L, Parravicini V. Coral reef structural complexity loss exposes coastlines to waves. Scientific Reports. 2023 Jan 30;13(1):1683 https://doi.org/10.1038/s41598-023-28945-x 
 
 
 ## International conferences and workshops
