--- a/about.Rmd
+++ b/about.Rmd
@@ -27,16 +27,13 @@ output:
 
 ## Bio
 
-Dr. Gonzalo Pérez-Rosales is a quantitative coral reef ecologist, oceanographer and TEK Diver with a high interest in the depth gradient of marine ecosystems. 
+Dr. Gonzalo Pérez-Rosales is a quantitative coral reef ecologist, oceanographer and TEK Diver with a high interest in the depth gradient of marine ecosystems.
 
-After a B.Sc. in Marine Science – Oceanography in the Canary Islands, I moved to Australia, where I joined the amazing world of Coral Reefs. Following academic volunteering programs and after being a fieldwork team member for "Chasing Coral", I committed myself to the world of Coral Reefs Research and Communication. 
-Finishing a M.Sc. in Biodiversity and Environmental Management of Coral Reefs between France and French Polynesia. 
-I completed a Ph.D. at EPHE-PSL at the CRIOBE focusing on the Mesophotic Coral Ecosystems of French Polynesia, again between French Polynesia and France.
-During my thesis entitled: **Diving deep on the reef slopes in French Polynesia: new insights into mesophotic coral ecosystems.** I was under the supervision of Laetitia Hédouin and Valeriano Parravicini. This thesis was possible thanks to the DEEPHOPE expedition and project with the Under The Pole team, for which I was an offshore scientist collecting data for my thesis and for others. The thesis was mostly carried out in French Polynesia. 
+After a B.Sc. in Marine Science – Oceanography in the Canary Islands, I moved to Australia, where I joined the amazing world of Coral Reefs. Following academic volunteering programs and after being a fieldwork team member for “Chasing Coral”, I committed myself to the world of Coral Reefs Research and Communication. Finishing a M.Sc. in Biodiversity and Environmental Management of Coral Reefs between France and French Polynesia. I completed a Ph.D. at EPHE-PSL at the CRIOBE, focusing on the Mesophotic Coral Ecosystems of French Polynesia, again between French Polynesia and France. During my thesis entitled: **Diving Deep on the Reef Slopes in French Polynesia: new insights into mesophotic coral ecosystems**. I was under the supervision of Laetitia Hédouin and Valeriano Parravicini. This thesis was possible thanks to the DEEPHOPE expedition and project with the Under The Pole team, for which I was an offshore scientist collecting data for my thesis and for others. The thesis was mainly carried out in French Polynesia.
 
-I am currently a PostDoc at [WHOI](https://www.whoi.edu/) at [Cohen Lab](https://www2.whoi.edu/site/cohenlab/super-reefs/), working on the [Super Reefs Project](https://superreefs.whoi.edu/).
+I am currently a PostDoc at Woods Hole Oceanographic Institution [WHOI](https://www.whoi.edu/) at [Cohen Lab](https://www2.whoi.edu/site/cohenlab/super-reefs/), working on the [Super Reefs Project](https://superreefs.whoi.edu/). A joint project from WHOI, Stanford and The Nature Conservancy to identify the reefs most likely to withstand future heatwaves and conserve them to ensure the future of coral reefs with climate change. 
 
-My ultimate goal is to provide empirical research and tools for science-based conservation decisions for the oceans' future with global changes.
+My ultimate goal is to provide empirical research and tools for science-based conservation decisions for the oceans’ future with global changes.
 
 
 ## Education
