--- a/index.Rmd
+++ b/index.Rmd
@@ -5,7 +5,7 @@ site: distill::distill_website
 ---
 ##         Postdoctoral Investigator at Woods Hole Oceanographic Institution [WHOI](https://www.whoi.edu/)
 
-Finishing my contract in November 2023. Open to listen to future opportunities  
+Finishing my contract in November 2023. Open to listen to future opportunities. Please get in [touch](mailto:gonzalo.prb@gmail.com)   
 
 My goal is to use quantiative ecology tools for the conservation planning of coral reefs.
 
