--- a/blog.Rmd
+++ b/blog.Rmd
@@ -139,4 +139,9 @@ Moving to the Canary Islands for my studies was simply the best choice. Even if 
 During my undergrad, my subject interests went from pure marine biology to physical oceanography to marine conservation and communication. To be honest, I knew I wanted to have an ocean-related professional career, but I needed to find the path. Most importantly, I had to look for opportunities abroad. 
 
 
+## .....................................................
+
+
+Go back to [main page](https://gonzaloperezrosales.netlify.app/)
+
 
