--- a/media.Rmd
+++ b/media.Rmd
@@ -56,3 +56,8 @@ I had the pleasure to be chosen as a "Coral Champion" and share the space with s
 knitr::include_graphics("LewisPughFoto.jpeg")
 ```
 
+## .....................................................
+
+Go back to [main page](https://gonzaloperezrosales.netlify.app/)
+
+
