--- a/research.Rmd
+++ b/research.Rmd
@@ -73,7 +73,14 @@ Journal article: Pérez-Rosales, G (2017). Un Paraíso al Borde del Colapso. El 
 
 BSc Thesis: Pérez-Rosales, G (2014). Estado de sobrepesca de las Islas Canarias/The state of overfishing in the Canary Islands - BSc Thesis. Acceda ULPGC
 
-(Request for copies [here](gonzalo.prb@gmail.com))
+Request for copies [here](mailto:gonzalo.prb@gmail.com)
+
+
+## .....................................................
+
+Go back to [main page](https://gonzaloperezrosales.netlify.app/)
+
+
 
 
 
