--- a/about.Rmd
+++ b/about.Rmd
@@ -34,10 +34,10 @@ My ultimate goal is to provide empirical research and tools for science-based co
 
 ## Education
 
-**Woods Hole Oceanographic Institution** | Cape Cod, Massachussets, United States
+**Woods Hole Oceanographic Institution** | Woods Hole, Massachussets, United States
 
-Postdoctoral Investigator | 2022 - 2024
-Work on the [Super Reefs Project](https://superreefs.whoi.edu/).
+Postdoctoral Investigator | 2022 - 2023
+Work on the Super Reefs Project
 
 
 **École Pratique des Hautes Études** | French Polynesia and France
@@ -54,6 +54,8 @@ M.S.c Biodiversity and environmental management | 2016 - 2018
 B.S.c in Marine Science & Oceanography | 2010 - 2014 
 
 ## Experience 
+
+**WHOI** | Postdoctoral Investigator | 2022 - 2023 
 
 **CRIOBE** | PhD candidate and Master internship | 2016 - 2022 
 
