--- a/blog.Rmd
+++ b/blog.Rmd
@@ -14,7 +14,7 @@ base_url: https://gonzaloperezrosales.netlify.app/
 ---
 
 
-## Deephope expedition with Under The Pole. A dream come true
+## Deephope expedition with Under The Pole. A dream come true!
 
 When I discovered the Why (name of the sailing boat) and met the Under The Pole (UTP) team in Mo’orea (French Polynesia), I realised that it would be very cool. After doing sporadic fieldwork in Moorea, I jumped on board in Tikehau (Tuamotu Archipelago), and I stayed there during the whole expedition, only jumping out at the end. We sailed to Tikehau, Rangiroa and Raroia from the Tuamotu Archipelago; Hiva Oa, Tahuata and Fatu Iva from the Marquesas Islands; Mangareva from the Gambier Archipelago and Raivavae from the Austral Archipelago. Then, we sampled Moorea again, Tahiti and Makatea. An unforgettable journey! 
 
