--- a/research.Rmd
+++ b/research.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Research"  # any name you want here
-description: I study coral reef ecology with a particular interest in Mesophotic Coral Ecosystems. My ultimate goal is to use quantitative ecology analysis for conservation planning.
+description: I study coral reef ecology with a particular interest in Mesophotic Coral Ecosystems and Coral Reefs. My ultimate goal is to use quantitative ecology analysis for the conservation planning of coral reefs with global warming and climate change.
 
 output:
   distill::distill_article:
@@ -12,8 +12,7 @@ twitter:
   creator: "@Perez_Rosales_G"
 base_url: https://gonzaloperezrosales.netlify.app/
 ---
- 
-My current and future research will be working on the [Super Reefs Project](https://superreefs.whoi.edu/) at [WHOI](https://www.whoi.edu/) to discover reefs across the tropics that can survive global warming and climate change.
+
  
 ## List of publications 
 
