--- a/research.Rmd
+++ b/research.Rmd
@@ -18,6 +18,10 @@ base_url: https://gonzaloperezrosales.netlify.app/
 
 **Pérez-Rosales G**, Rouzé H, Pichon M, Bongaerts P, Bregere N, Carlot J, UTP Consortium, Parravicini V, Hédouin L. (2024) Differential strategies developed by two light-dependent scleractinian corals to extend their vertical range to mesophotic depths. Coral Reefs https://doi.org/10.1007/s00338-024-02544-2
 
+Radice V, Hernández-Agreda A, **Pérez-Rosales G**, et. al, Bongaerts P. (2024) Recent trends and biases in mesophotic ecosystem research. Biology Letters https://doi.org/10.1098/rsbl.2024.0465 (equal contribution to the study)
+
+Colin JA, Lock C, **Pérez-Rosales G**, Rouzé H, Loreto Paulino Jr. L, Raymundo LJ, Bentlage B. (2024) Symbiodiniaceae phenotypic traits as stress bioindicators for coral transplantation and cold-water bleaching. Marine Pollution Bulletin https://doi.org/10.1016/j.marpolbul.2024.117250
+
 **Pérez-Rosales G**, Hernández-Agreda A, Bongaerts P, Rouzé H, Pichon M, Carlot J, Torda G, UTP Consortium, Hédouin L, Parravicini V. (2022) Mesophotic depths hide high coral cover communities in French Polynesia. Science of the Total Environment https://doi.org/10.1016/j.scitotenv.2022.157049 
 
 **Pérez-Rosales G**, Pichon M, Rouzé H, Villeger S, Toda G, Carlot J, Bongaerts P, UTP Consortium, Parravicini V, Hédouin L. (2022) Mesophotic coral ecosystems of French Polynesia are hotspots of alpha and beta generic diversity for scleractinian assemblages. Diversity & Distribution https://doi.org/10.1111/ddi.13549
@@ -44,8 +48,6 @@ Bongaerts P, **Perez-Rosales G**, Radice VZ, Eyal G, Gori A, Gress E, Hammerman 
 
 ## In review
 
-Radice V, Hernández-Agreda A, **Pérez-Rosales G**, et. al Recent trends and biases in mesophotic ecosystem research. Biology Letters RSBL-2024-0465
-Colin JA, Lock C, **Pérez-Rosales G**, Rouzé H, Loreto Paulino Jr. L, Raymundo LJ, Bentlage B Symbiodiniaceae phenotypic traits as stress bioindicators for coral transplantation and cold-water bleaching. Marine Pollution Bulletin MPB-D-24-02156
 
 # In preparation
 
